--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
         "production": "mix --production"
     },
     "devDependencies": {
-        "@tailwindcss/forms": "^0.4.0",
-        "alpinejs": "^3.4.2",
-        "autoprefixer": "10.4.5",
-        "axios": "^0.25",
-        "laravel-mix": "^6.0.6",
-        "lodash": "^4.17.19",
-        "postcss": "^8.4.6",
-        "tailwindcss": "^3.0.18"
+        "@tailwindcss/forms": "^0.5.7",
+        "alpinejs": "^3.13.3",
+        "autoprefixer": "^10.4.16",
+        "axios": "^1.6.3",
+        "laravel-mix": "^6.0.49",
+        "lodash": "^4.17.21",
+        "postcss": "^8.4.32",
+        "tailwindcss": "^3.4.0"
     }
 }
